# R-Type-Epitech

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  run.sh
.github/workflows/: main.yml
Error/: Error.cpp  Error.hpp
client/: CMakeLists.txt
client/include/: Game.hpp  Texture.hpp  Window.hpp
client/include/Network/: network_include.hpp
client/include/Utilities/: Back.hpp  Button.hpp  Clock.hpp  FPS.hpp  Field.hpp  Moveback.hpp  Picture.hpp  Text.hpp  TextButton.hpp
client/src/: Game.cpp  Texture.cpp  Window.cpp  main.cpp
client/src/Utilities/: Back.cpp  Button.cpp  Clock.cpp  Field.cpp  Moveback.cpp  Picture.cpp  Text.cpp  TextButton.cpp
doc/: rfc4040.txt
doc/html/: _back_8hpp_source.html  _button_8hpp_source.html  _clock_8hpp_source.html  _collision_8hpp_source.html  _collision_system_8hpp_source.html  _damage_8hpp_source.html  _death_system_8hpp_source.html  _drawable_8hpp_source.html  _enemy_system_8hpp_source.html  _entity_8hpp_source.html  _entity_pool_8hpp_source.html  _error_8hpp_source.html  _f_p_s_8hpp_source.html  _field_8hpp_source.html  _game_8hpp_source.html  _health_8hpp_source.html  _i_component_8hpp_source.html  _i_socket_8hpp_source.html  _i_system_8hpp_source.html  _instance_8hpp_source.html  _laser_system_8hpp_source.html  _moveback_8hpp_source.html  _movement_8hpp_source.html  _picture_8hpp_source.html  _player_system_8hpp_source.html  _position_8hpp_source.html  _server_8hpp_source.html  _socket_8hpp_source.html  _speed_8hpp_source.html  _text_8hpp_source.html  _text_button_8hpp_source.html  _texture_8hpp_source.html  _window_8hpp_source.html  annotated.html  basics_8hpp_source.html  class_back-members.html  class_back.html  class_button-members.html  class_button.html  class_clock-members.html  (+150 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+8 more)
ecs/Component/: IComponent.hpp
ecs/Component/Collision/: Collision.cpp  Collision.hpp
ecs/Component/Damage/: Damage.cpp  Damage.hpp
ecs/Component/Drawable/: Drawable.cpp  Drawable.hpp
ecs/Component/Health/: Health.cpp  Health.hpp
ecs/Component/Player/: Player.cpp  Player.hpp
ecs/Component/Position/: Position.cpp  Position.hpp
ecs/Component/Speed/: Speed.cpp  Speed.hpp
ecs/Configuration/: Enemy.conf  Enemy2.conf  Enemy3.conf  FORMAT.conf  Laser.conf  Player1.conf  Player2.conf  Player3.conf  Player4.conf
ecs/Entity/: Entity.cpp  Entity.hpp  EntityPool.cpp  EntityPool.hpp
ecs/System/: ISystem.hpp
ecs/System/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
ecs/System/DeathSystem/: DeathSystem.cpp  DeathSystem.hpp
ecs/System/EnemySystem/: EnemySystem.cpp  EnemySystem.hpp
ecs/System/LaserSystem/: LaserSystem.cpp  LaserSystem.hpp
ecs/System/MovementSystem/: Movement.cpp  Movement.hpp
ecs/System/PlayerSystem/: PlayerSystem.cpp  PlayerSystem.hpp
server/: CMakeLists.txt
server/include/: Server.hpp  basics.hpp
server/include/instance/: Instance.hpp  Player.hpp
server/share/: ISocket.hpp  Socket.hpp  toShare.hpp
server/src/: Server.cpp  Socket.cpp  main.cpp  protocol.txt
server/src/instance/: Instance.cpp  Player.cpp
